# openair

./: CMakeLists.txt  Kconfig  README.rst  SDK_VERSION  west.yml
applications/atm_tput/tput_central/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  sample.yaml
applications/atm_tput/tput_central/src/: main.c
applications/multimode_consumer_tag/: CMakeLists.txt  Kconfig  README.rst  README_FHN_RANGING_OOB.rst  app.overlay  basic_cs_pd50.conf  basic_ota_bt.conf  prj.conf  sample.yaml  stf_tag.conf
applications/multimode_consumer_tag/boards/: ATMBTCSTAG-3405.conf  ATMBTCSTAG-3405.overlay  ATMEVK-3405-PQK-5.overlay  ATMEVK-3405-YBV-5.overlay
applications/multimode_consumer_tag/socs/: ATM33xx-5.conf  ATM33xx-5.overlay  ATM34xx-5.conf  ATM34xx-5.overlay
applications/multimode_consumer_tag/src/: main.c
applications/multimode_consumer_tag/src/platform/: CMakeLists.txt  fmna_tag_platform.c  fmna_tag_platform.h  fp_tag_platform.c  fp_tag_platform.h  fp_tag_platform_ranging.c  fp_tag_platform_ranging.h  platform.c  platform.h  platform_common.h  platform_ctrl_battery.c  platform_ctrl_battery.h  platform_ctrl_button.c  platform_ctrl_button.h  platform_ctrl_buzzer.c  platform_ctrl_buzzer.h  platform_ctrl_led.c  platform_ctrl_led.h  platform_ctrl_motion_detect.c  platform_ctrl_motion_detect.h  platform_ctrl_ota.c  platform_ctrl_ota.h  platform_ctrl_wdt.c  platform_ctrl_wdt.h  stf_tag_platform.c  stf_tag_platform.h
applications/multimode_consumer_tag/src/tls_config/: user-tls.conf
applications/multimode_consumer_tag/tag_data/: factory.yml
applications/sensor_beacon/: CMakeLists.txt  Kconfig  README.rst  app.overlay  prj.conf  prj_debug.conf  sample.yaml
applications/sensor_beacon/boards/: ATMBTCSTAG-3405.conf
applications/sensor_beacon/src/: battery_monitor.c  battery_monitor.h  beacon_adv.c  beacon_adv.h  led_button_ctrl.c  led_button_ctrl.h  main.c  sensor_beacon.c  sensor_beacon.h  sensor_data.c  sensor_data.h  sensor_interface.c  sensor_interface.h
applications/sensor_beacon/tests/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
applications/sensor_beacon/tests/src/: test_battery_monitor.c  test_beacon_adv.c  test_main.c  test_sensor_data.c  test_sensor_interface.c
applications/ss_fmna_tag/: CMakeLists.txt  Kconfig  README.rst  app.overlay  prj.conf  sample.yaml
applications/ss_fmna_tag/boards/: ATMBTCSTAG-3405_ns.overlay  ATMEVK-3405-PQK-5_ns.overlay  ATMEVK-3405-WQK-5_ns.overlay  ATMEVK-3425-YQK-5_ns.overlay  ATMEVK-3430e-YQN-5_ns.overlay
applications/ss_fmna_tag/src/: battery.c  battery.h  main.c  motion.c  motion.h  sound.c
applications/ss_fmna_tag/src/tls_config/: user-tls.conf
lib/: CMakeLists.txt
lib/app_batt/: CMakeLists.txt  Kconfig  app_batt.c  app_batt.h
lib/app_work_q/: CMakeLists.txt  Kconfig  app_work_q.c  app_work_q.h
lib/atm_asm/: CMakeLists.txt  Kconfig  atm_asm.c  atm_asm.h
lib/atm_bthci_utils/: CMakeLists.txt  Kconfig  atm_bthci_utils.h  atm_bthci_utils_dump.c
lib/atm_cs/: CMakeLists.txt  Kconfig  README.rst  atm_cs.c  atm_cs.h
lib/atm_debug_auth/: CMakeLists.txt  Kconfig  atm_debug_auth.c  atm_debug_auth.h  root-debug-ec-p256.pem
lib/atm_fmna/: CMakeLists.txt  Kconfig  License.rtf  fmna_api.h
lib/atm_gfp/: CMakeLists.txt  Kconfig  atm_gfp.c  atm_gfp.h
lib/atm_hci_uart/: CMakeLists.txt  Kconfig  atm_hci_uart.c  atm_hci_uart.h
lib/atm_mcuboot_ext/: CMakeLists.txt  Kconfig  atm_mcuboot_ext.c  atm_mcuboot_ext.h  atm_mcuboot_ext.mk  atm_mcuboot_ext_uart_auth.c  atm_mcuboot_ext_uart_auth.h
lib/atm_shell/: CMakeLists.txt  Kconfig  atm_shell.c
lib/atm_test_common/: CMakeLists.txt  Kconfig  atm_test_common.h  atm_test_util.c
lib/atm_utils_c/: atm_utils_c.h
lib/atm_utils_endian/: atm_utils_endian.h
lib/atm_utils_math/: CMakeLists.txt  atm_utils_math.h
lib/atm_utils_reg/: CMakeLists.txt  Kconfig  atm_utils_reg.c  atm_utils_reg.h
lib/atm_utils_slist/: CMakeLists.txt  Kconfig  atm_utils_slist.c  atm_utils_slist.h
lib/atm_vendor/: CMakeLists.txt  Kconfig  atm_vendor.c  atm_vendor.h  atm_vendor.mk  atm_vendor_api.c  atm_vendor_internal.h
lib/atm_vendor/api_include/: atm_vendor_api.h
lib/dtm_2wire/: CMakeLists.txt  Kconfig  dtm_hci_bridge.c  dtm_mgr.c  dtm_mgr_proc.c
lib/dtm_2wire/include/: ble_dtm.h  dtm_hci_bridge.h  dtm_mgr.h  dtm_mgr_int.h
lib/gfp_crypto/: CMakeLists.txt  Kconfig  gfp_crypto.c  gfp_crypto.h
lib/mcuboot_hooks/: CMakeLists.txt  Kconfig  README.rst  mcuboot_hooks.c
lib/micro-ecc/: CMakeLists.txt  Kconfig  ecdsa_alt.c
lib/ranging_oob_de/: CMakeLists.txt  Kconfig  ranging_oob_de.h
lib/sec_assert/: CMakeLists.txt  sec_assert.c  sec_assert.h
lib/sec_service/: CMakeLists.txt  Kconfig  sec_service.c  sec_service.h
modules/hal_atmosic/ATM33xx-5/: CMakeLists.txt  Kconfig  noinit.ld  ramfunc-section.ld
modules/hal_atmosic/ATM33xx-5/config/: atm33-mbedtls-config.h
modules/hal_atmosic/ATM33xx-5/drivers/: CMakeLists.txt  Kconfig  user_debug.c
modules/hal_atmosic/ATM33xx-5/gdb/: paris.gdb
modules/hal_atmosic/ATM33xx-5/include/: arch.h  calibration.h  ll.h  pinmap_x3xx.h  pinmux.h  pseq_status.h  vectors.h
modules/hal_atmosic/ATM33xx-5/jlink/: ATM33.xml  ATM3325_EXTFLASH.FLM  ATM3325_STACKFLASH.FLM  ATM3330_EXTFLASH.FLM  (+3 more)
modules/hal_atmosic/ATM34xx/: CMakeLists.txt  Kconfig
modules/hal_atmosic/ATMx2xx-x1x/: CMakeLists.txt  Kconfig  noinit.ld  ramfunc-section.ld
modules/hal_atmosic/drivers/: CMakeLists.txt  Kconfig
samples/bluetooth/hci_vendor/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/bluetooth/periodic_sync_rsp/: CMakeLists.txt  README.rst  sample.yaml
samples/sensor/bme280/: CMakeLists.txt  sample.yaml
samples/spe/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/spe/src/: main.c
subsys/bluetooth/services/: CMakeLists.txt  Kconfig
tests/atm/fast_code/: CMakeLists.txt  README.rst  fast_code_snippet.ld  prj.conf  testcase.yaml
tests/drivers/atm_spe_sec_fault_storage/: CMakeLists.txt  Kconfig  README.rst  testcase.yaml
tests/lib/dtm_2wire/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
(+2046 files in other folders)
