# Copyright (c) 2024 Atmosic
#
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(app_batt)
add_subdirectory(app_work_q)
add_subdirectory(atm_asm)
add_subdirectory(atm_bthci_utils)
add_subdirectory(atm_debug_auth)
add_subdirectory(atm_mcuboot_ext)
add_subdirectory(atm_test_common)
add_subdirectory(atm_utils_c)
add_subdirectory(atm_utils_endian)
add_subdirectory(atm_utils_math)
add_subdirectory(atm_utils_reg)
add_subdirectory(atm_utils_slist)
add_subdirectory(mcuboot_hooks)
add_subdirectory(micro-ecc)
add_subdirectory(sec_assert)
add_subdirectory(sec_service)
