# Copyright (c) 2024-2025 Atmosic
#
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(atm_bp_clock)
add_subdirectory(atm_sha2)
add_subdirectory(batt_model)
add_subdirectory(batt_model_coin)
add_subdirectory(batt_model_dry)
add_subdirectory(dma)
add_subdirectory(eui)
add_subdirectory(rram_rom_prot)
