# Copyright (c) 2024-2025 Atmosic
#
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(at_tz_mpc)
add_subdirectory(at_tz_sau)
add_subdirectory(atm_aes)
add_subdirectory(atm_bp_clock)
add_subdirectory(atm_sha2)
add_subdirectory(atm_spe_sec_fault_storage)
add_subdirectory(batt_model)
add_subdirectory(batt_model_coin)
add_subdirectory(batt_model_dry)
add_subdirectory(batt_model_hsc_liion)
add_subdirectory(dma)
add_subdirectory(eui)
add_subdirectory(lpc)
add_subdirectory(pc_ctr)
add_subdirectory(pc_ctr_sleep)
add_subdirectory(pc_ll_cfg)
add_subdirectory(pc_vs_cmd)
add_subdirectory(radio_hal_ble)
add_subdirectory(radio_hal_ble_cs)
add_subdirectory(radio_hal_ble_cte)
add_subdirectory(radio_hal_common)
add_subdirectory(radio_hal_frc)
add_subdirectory(radio_hal_log)
add_subdirectory(radio_hal_mgr)
add_subdirectory(radio_hal_prof)
add_subdirectory(radio_req_ble)
add_subdirectory(radio_status)
add_subdirectory(reset)
add_subdirectory(rram_rom_prot)
add_subdirectory(sec_cache)
add_subdirectory(sec_debug)
add_subdirectory(sec_reset)
add_subdirectory(sec_wdog_disable)
add_subdirectory(user_debug)

if(CONFIG_ATM_AES_HW OR CONFIG_ATM_SHA2_HW OR CONFIG_ATM_UECC)
  zephyr_include_directories(
    ../config
  )
  zephyr_link_libraries(mbedTLS)
endif()
